Completed first version of turbulence modelling.

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -944,43 +944,47 @@ we can compactly write the Reynolds-stress equation in its common form
 \end{eqBox}
 We are still left with a system of equations that remains to be closed. In the quest of solving turbulent flows using the RANS equations, we dedicate the rest of this chapter to the derivation of common models that have been devised to give closure to these equations.
 \section{Turbulence Modelling}
-We have already derived the time-averaged flow equations, which are generally used in the modelling of industrial turbulent flows due to their relatively low computational cost. However, we have also stated that their use is limited to obtaining mean flow properties. In addition, we have shown that the time-averaged conservation laws require additional mathematical equations due to the closure problem in turbulence. Specifically, we intend to show simple models to compute the Reynolds stresses, which appear due to the averaging of the original Navier-Stokes equations. 
+In the previous section, we derived the RANS equations. This time-averaged system of conservation laws is widely used in the aerospace industry, in particular, due to their relatively low computational cost when compared to direct approximations. We have also stated that their use is limited to obtaining mean flow properties due to the averaging of the turbulent scales. In addition, we have shown that we require additional mathematical equations to give closure to the system. This is done by introducing approximations that model features of the Reynolds stress tensor.  We will observe that none of these models is applicable to all types of flow. Indeed, each of these turbulence models has its applications and limitations. We begin by presenting the Boussinesq approximation, where a new apparent viscous parameter known as the \textit{eddy viscosity} is introduced. Later, it will be shown that all RANS models devise different strategies to model this parameter, which is done by comparison with empirical data. 
+
+We categorize these models according to the number of additional partial differential equations required for turbulence closure. We present zero-equation, also known as algebraic, one-equation and two-equation models. Note that models with a larger number of PDEs exist; however, this also implies a decrease in computational efficiency. A second feature that categorizes these models, according to Wilcox~\cite{wilcox1998turbulence} is whether the model can be considered \textit{complete} or \textit{incomplete}. A complete model does not require previously known information about the turbulence properties of the flow to simulate, whereas incomplete models do. We also note that generally, one must be careful when choosing a turbulence model. While some may be used to predict turbulence mean properties, others require previous calibration and are rarely used for unknown flows. We note that this section includes some of the most known turbulence models, and it is by no means a turbulence modelling reference by itself. This section is intended as an introduction to the modelling of turbulent flows in Computational Fluid Dynamics.
 \subsection{The Boussinesq Hypothesis}
-In 1877, Boussinesq presented an approximation for the turbulent transfer of momentum in relation with molecular motion. The assumption was that the Reynolds stresses were linearly related to the mean flow, specifically to the mean strain tensor $\overline S_{ij}$ such that
+In 1877, Boussinesq presented an approximation for the turbulent transfer of momentum in relation to molecular motion. The assumption was that the Reynolds stresses were linearly related to the mean flow, specifically to the mean strain tensor $\overline S_{ij}$ such that
 \begin{eqBox}
 \begin{equation}
-	-\rho \overline{v_i^\prime v_j^\prime} = 
-		2 \mu_\tau \left(\overline S_{ij} - \frac{1}{3} \frac{\partial \overline v_k}{\partial x_k}\delta_{ij}
-		\right) - \frac{2}{3} k \delta_{ij},
-	\label{eq:boussinesq_approximation}
+    -\rho \overline{v_i^\prime v_j^\prime} = \rho \hat \tau_{ij} =
+        2 \mu_\tau \left(\overline S_{ij} - \frac{1}{3} \frac{\partial \overline v_k}{\partial x_k}\delta_{ij}
+        \right) - \frac{2}{3} k \delta_{ij},
+    \label{eq:boussinesq_approximation}
 \end{equation}
 \end{eqBox}
 where
 \begin{equation}
-	\overline S_{ij} = 
-	\frac{\partial \overline v_i}{\partial x_j} 
+    \overline S_{ij} = 
+    \frac{\partial \overline v_i}{\partial x_j} 
 		+ \frac{\partial \overline v_j}{\partial x_i},
+		\label{eq:meanstrainrate}
 \end{equation}
-$k$ is the kinetic energy $\frac{1}{2}\overline{v_i^\prime v_i^\prime}$, $\delta_{ij}$ is the Kronecker delta and $\mu_\tau$ is an isotropic scalar quantity, known as \textit{eddy viscosity}. (Note that for incompressible flows, the second term in equation~\ref{eq:boussinesq_approximation} vanishes due to continuity). This approximation allows for closure of the RANS equations and is the basis of multiple widely-used turbulent models. However, the question lies in previously defining the constant viscosity coefficient, which does not depend on the fluid, but the characteristics of the flow field. 
+$k$ is the kinetic energy $\frac{1}{2}\overline{v_i^\prime v_i^\prime}$, $\delta_{ij}$ is the Kronecker delta and $\mu_\tau$ is an isotropic scalar quantity, known as \textit{eddy viscosity}. Note that for incompressible flows, $\frac{\partial \overline v_k}{\partial x_k}\equiv0$ due to continuity. This closing approximation of the RANS equations is the basis of the turbulence models presented hereafter. Now, the remaining task is to define the value of $\mu_\tau$. 
 
-In addition, observe that the resulting Reynolds stresses, which are a consequence of the averaging of the convective term of the Navier-Stokes equations, are now represented as additional viscous terms. This is, in fact, contradictory since we are neglecting the convective effects of these stresses and instead introducing dissipation into the system. Indeed, the assumption that the Reynolds stress tensor behaves linearly with the rate of strain is incorrect. Turbulent transfer of momentum cannot be associated with the molecular transfer of momentum in gases since eddies cannot be assumed to be rigid bodies.  Contrary to molecules, the largest eddies have dimensions of the order of the characteristic length of the domain. Despite the lack of theoretical validity behind the Boussinesq assumption, it has proven to be useful for relatively simple flows. These include simple shear layers and attached boundary layers. 
+Observe that the resulting Reynolds stresses are now represented as additional viscous terms. This is, in fact, contradictory since we are neglecting the convective effects of these stresses. Is this a real contradiction?  Indeed, the assumption that the Reynolds stress tensor behaves linearly with the rate of strain is incorrect for most flows and is the result of incorrectly associating the behaviour of gas molecules from the kinetic theory of gases to that of the turbulent structures. In fact, turbulent transfer of momentum cannot be associated with the molecular transfer of momentum in gases. One of the reasons is the fact that eddies cannot be assumed to be rigid bodies. Furthermore, recall that the size of turbulent structures ranges from the characteristic length of the domain to a tiny number that cubically decreases with the Reynolds number. Hence the relation between eddy sizes and their "mean free-path" cannot be associated with that of the molecules. This discrepancy shows a lack of theoretical justification for the Boussinesq assumption. However, most turbulence models have been devised under this premise, and have proven to be accurate for specific types of flows.
 
-We now shift our attention to turbulence models based on the Boussinesq assumption. The quest for an accurate value of $\mu_\tau$ can become very complex. Some of these models define $\mu_\tau$ algebraically, namely the mixing-length model, by a single transport equation, such as the Spalart-Allmaras model or by solving two additional equations such as the $k-\epsilon$ and $k-\omega$ models. These are by no means the only turbulence models. Others with increased complexity exist, but they also incur increased computational cost when implemented in CFD algorithms. As mentioned by Wilcox~\cite{wilcox1998turbulence}, it is important to know the limitations of each of these models, which include flow over curved surfaces, rotating fluids and complex three-dimensional flows. 
+We now shift our attention to turbulence models based on the approximation presented by Boussinesq. These models are often known as \textit{eddy-viscosity models}. We will observe that the quest for an accurate value of $\mu_\tau$ can become very involved. 
 
 \subsection{The Mixing Length Model}
-Rather than defining a constant value of viscosity dependent on the velocity field, Prandtl proposed a \textit{rough} approach for the calculation of $\mu_\tau$. Recall the mean-free-path from kinetic theory of gases, which indicates the distance travelled by a molecule before any transfer of momentum occurs by means of collision. Analogous to this distance, Prandtl considered a \textit{mixing length} $\ell_m$, which is equivalent to the path travelled by a fluid element before losing its properties due to mixing with the neighbouring fluid. He further postulated that the characteristic velocity and $\ell_m$ could be related for a two-dimensional boundary layer flow by
+Rather than defining a constant value of viscosity dependent on the velocity field, Prandtl proposed a \textit{rough} approach for the calculation of $\mu_\tau$. Recall the mean-free-path in a gas is the distance travelled by a molecule before collision, thus transferring its momentum. Analogous to this distance, Prandtl considered a \textit{mixing length} $\ell_m$, which is equivalent to the path travelled by a fluid element before losing momentum due to mixing with the neighbouring fluid. He further postulated that the characteristic velocity and $\ell_m$ could be related for a two-dimensional boundary layer flow by
 \begin{equation}
     \mu_\tau = \ell_m^2 \left| \frac{\partial \overline v_x}{\partial y}\right|,
 \end{equation}
-where $l_m$ is impirically determined and is known for only certain types of flows. Other authors have proposed generalizations of this equation such as that by Baldwin and Lomax~\cite{} as a function of the mean rate of strain~\cite{pope2001turbulent}
+where $\ell_m$ is empirically determined and is known for only certain types of flows. This is the basis of the Mixing Length model (ML). Other authors have proposed generalizations of this equation such as that by Baldwin and Lomax~\cite{} as a function of the mean rate of strain~\cite{pope2001turbulent}
 \begin{eqBox}
 \begin{equation}
     \mu_\tau = \ell_m^2 \sqrt{\overline S_{ij} \overline S_{ij}},
 \end{equation}
 \end{eqBox}
-We have now algebraically defined Boussinesq's viscosity $\mu_\tau$ with another empirical parameter $\ell_m$. Hence we have carried on the assumptions from Boussinesq, which we have previously stated to be inaccurate. In additione, the specification of the mixing length is dependent on the type of flow. It must be determined for flows that have not been studied before under this configuration. The fact that we require $\ell_m$ to be previously determined classifies the model as \textit{incomplete} in the sense that it cannot be directly used to predict properties of flows of which there is no prior knowledge. Its use is limited to simple flows for which $\ell_m$ has been previously and thoroughly analyzed.  
+We have now algebraically defined Boussinesq's viscosity $\mu_\tau$ with another empirical parameter $\ell_m$. Hence we have carried on the assumptions from Boussinesq, which we have previously stated to be inaccurate. In addition, the specification of the mixing length is dependent on whether it is a jet, wake, wall boundary layer or another type of flow~\cite{andersonComputationalFluidMechanics2016}. It must be determined for flows that have not been studied before under this configuration. Therefore, this model is considered incomplete. In addition, it has been shown that to have accurate results, $\mu_\tau$ should be treated as a tensor. The mixing-layer model's applicability is limited to simple flows for which $\ell_m$ has been previously determined. Hence it requires callibration before it can be used for any new type of flow. 
+
 \subsection{The Spalart-Allmaras Model}
-Spalart and Allmaras~\cite{} took an empirical approach, using arguments from dimensional analysis developed a new model, which included the resolution of an ad-hoc transport equation for the turbulence field variable $\tilde \nu$. The model was initially developed for aerodynamics applications such as transonic flow over airfoils. Several nested versions are included in the original publication, and these range from simple models for free shear flows to more complex derivations that can be applied to boundary layer flows. The general model is given by
+Spalart and Allmaras~\cite{spalartOneequationTurbulenceModel1992} (SA) took an empirical approach, using arguments from dimensional analysis developed a new model, which included the resolution of an ad-hoc transport equation for a turbulence variable $\tilde \nu$. The model was initially developed for aerodynamics applications such as transonic flow over airfoils. Several nested versions are included in the original publication, and these range from simple models for free shear flows to more complex derivations that can be applied to boundary layer flows. The general model is given by
 \begin{eqBox}
 \begin{equation}
     \frac{\partial \tilde{\nu}}{\partial t} 
@@ -995,18 +999,18 @@ Spalart and Allmaras~\cite{} took an empirical approach, using arguments from di
 \end{eqBox}
 where $c$ and $f$ are empirical constants and functions of the turbulence model, which we define shortly along with the rest of the variables. Upon solving Equation~\ref{eq:spalart_allmaras}, we can compute the eddy viscosity $\mu_\tau$ from
 \begin{equation}
-    \mu_\tau=\rho \tilde \nu \frac{\chi^3}{\chi^3+c_{v1}^3},\quad \chi=\frac{\tilde \nu}{\nu},
+    \mu_\tau=\rho \tilde \nu f_{v1},\quad \chi=\frac{\tilde \nu}{\nu},
     \label{eq:sa_eddyviscosity}
 \end{equation}
 where $\nu$ is the molecular kinematic viscosity. In addition,
 \begin{equation}
-    \tilde S \equiv S + \frac{\tilde \nu}{\kappa^2 d^2}f_{v2}~,\quad f_{v2}=1-\frac{\chi}{1+\chi f_{v1}},
+    \tilde S \equiv S + \frac{\tilde \nu}{\kappa^2 d^2}f_{v2}~,\quad f_{v1}=\frac{\chi^3}{\chi^3+c_{v1}^3},\quad f_{v2}=1-\frac{\chi}{1+\chi f_{v1}},
 \end{equation}
 with $S$ the magnitude of the vorticity and $d$ the distance to the closest wall~\cite{spalartallmaras}. 
 \begin{align}
-    f_w&=\left[r+c_{w2}\left(r^6-r\right)\right]
-    \left[\frac{1+c_{w3}^6}{g^6+c_{w3}^6}\right]^{1/6},\quad r\equiv \min\left(\frac{\tilde\nu}{\tilde S \kappa^2 d^2},10\right). \\
-    f_{t2}&=c_{t3} \exp \left[-c_{t4}\chi^2\right].
+    f_w&=g
+    \left[\frac{1+c_{w3}^6}{g^6+c_{w3}^6}\right]^{1/6},& &r\equiv \min\left(\frac{\tilde\nu}{\tilde S \kappa^2 d^2},10\right). \\
+    f_{t2}&=c_{t3} \exp \left[-c_{t4}\chi^2\right] & &g=\left[r+c_{w2}\left(r^6-r\right)\right].
 \end{align}
 Finally, the constants are given by 
 \begin{align}
@@ -1014,60 +1018,73 @@ Finally, the constants are given by
     &c_{w2} = 0.3,&    &c_{w3} =2,&     &c_{v1} = 7.1,&   &c_{t3}=1.2,  \\
     &c_{t4} = 0.5,&      &c_{w1} = \frac{c_{b1}}{\kappa^2} + \frac{1+c_{b2}}{\sigma}.
 \end{align}
-The implementation of this model allows to remove the incomplete condition from the previously defined models. Wall and freestream boundary conditions are
+The implementation of this model allows to remove the incomplete condition from the previously defined models. Wall and freestream boundary conditions are~\cite{nasaresource}
 \begin{equation}
     \tilde \nu_{wall} = 0,\quad \tilde\nu_{\infty}=3 \nu_{\infty}:to:5\nu_{v_\infty},
 \end{equation}
-according to NASA Turbulence Model Database~\cite{}. Now, by solving Equations~\ref{eq:spalart_allmaras} and~\ref{eq:sa_eddyviscosity}, we are able to give closure to the RANS equations. Since only an additional equation is required, the relative computational cost of this turbulence model is commonly appraised. Given that this model was initially developed for aerospace applications, it is a popular choice for the prediction of aerodynamic loads at low to moderate angles of attack due to relatively good resolution of boundary layer problems. 
+Now, by solving Equations~\ref{eq:spalart_allmaras} and~\ref{eq:sa_eddyviscosity}, we are able to give closure to the RANS equations. Since only an additional equation is required, the relative computational cost of this turbulence model is commonly appraised. Given that this model was initially developed for aerospace applications, it is a popular choice for the prediction of aerodynamic loads at low to moderate angles of attack due to relatively good resolution of boundary layer problems. 
 
-Furthermore, the SA model is well-suited for its application with unstructured discretization methods. Despite its success in predicting close values to experimental measurements for simple aerospace applications, it has been found to fail for flows that include jet-like free-shear regions and flows involving complex recirculation. It is important to be aware of the advantages and limitations of the model so that results can be well-understood.
-
+Furthermore, the SA model is well-suited for its application with unstructured discretization methods. Despite its success in predicting close values to experimental measurements for simple aerospace applications, it has been found to fail for flows that include jet-like free-shear regions and flows involving complex recirculation.
 \subsection{The k-$\epsilon$ Model}
-One of the most commonly used RANS models for the computation of turbulent flows is the $k-\epsilon$ model. It was originally developed to overcome the deficiencies of the mixing length model, such that no specification of flow-dependent properties are required. Instead, closure is achieved through the resolution of two transport equations for the turbulent kinetic energy $k$ and its rate of dissipation $\epsilon$. Different versions of this model have been provided ~\cite{laundersharma, launderjones}. We describe the \textit{standard} $\k-\epsilon$ model, as shown by~\cite{bardina}. The relation between the eddy-viscosity and the two aforementioned turbulent quantities is given by
+One of the most commonly used RANS models for the computation of turbulent flows is the $k-\epsilon$ model. It was originally developed to overcome the deficiencies of the mixing length model, such that no specification of flow-dependent properties are required. Instead, closure is achieved through the resolution of two transport equations for the turbulent kinetic energy $k$ and its rate of dissipation $\epsilon$. Hence this model is complete. Different versions of this model have been provided ~\cite{laundersharma, launderjones}. We describe the \textit{standard} $\k-\epsilon$ model, as shown by~\cite{bardina}. The relation between the eddy-viscosity and the two aforementioned turbulent quantities is given by
 \begin{equation}
-    \nu_\tau = c_\mu k^2/\epsilon,
+    \mu_\tau = c_\mu \rho k^2/\epsilon,
 \end{equation}
 where $c_\mu$ is a constant, which we define at the end of this section. Define the instantaneous kinetic energy to be the sum of the mean and the fluctuation component, such that
 \begin{align}
     k(t) &= \overline{k} + k^\prime, \nonumber \\
          &= \frac{1}{2} \sum_{i=1}^d \overline{v}_i + \frac{1}{2}\sum_{i=1}^d \overline{v_i^\prime v_i^\prime}.
 \end{align}
-Hence, by multiplying each velocity component with their corresponding momentum equation in the appropriate direction, a PDE for the turbulent kinetic energy can be obtained. After performing Reynolds averaging and several algebraic operations, we can write~\cite{wilcox1998turbulence}
+Hence, by multiplying each velocity component with their corresponding momentum equation in the appropriate direction, a PDE for the turbulent kinetic energy can be obtained. After performing Reynolds averaging and several algebraic operations, we can write
 \begin{eqBox}
 \begin{equation}
-    \frac{\partial k}{\partial t} + 
-    \overline v_j \frac{\partial k}{\partial x_j} 
-    = \tau_{ij} \frac{\partial\overline v_i}{\partial x_j} 
-    - \epsilon + \frac{\partial}{\partial x_j}\left[(\nu + \nu_\tau/\sigma_k)\frac{\partial k}{\partial x_j}\right].
+    \rho\frac{\partial k}{\partial t} + 
+    \rho\overline v_j \frac{\partial k}{\partial x_j} 
+    = \rho \hat \tau_{ij} \frac{\partial \overline v_i}{\partial x_j}
+    - \rho\epsilon + \frac{\partial}{\partial x_j}\left[(\mu + \mu_\tau/\sigma_k)\frac{\partial k}{\partial x_j}\right].
 \end{equation}
 \end{eqBox}
-The second component of this model is the dissipation rate $\epsilon$, for which the following transport equation was derived. 
+The second component of this model is the dissipation rate $\epsilon$, for which the following transport equation was derived
 \begin{eqBox}
 \begin{equation}
-    \frac{\partial \epsilon}{\partial t}
-    + \overline v_j \frac{\partial\epsilon}{\partial x_j}
-    = c_{\epsilon 1}\frac{\epsilon}{k} \tau_{ij} \frac{\partial \overline v_i}{\partial x_j}
-    - c_{\epsilon2} \frac{\epsilon^2}{k} 
-    + \frac{\partial}{\partial x_j} \left[(\nu + \nu_\tau)/\sigma_\epsilon \frac{\partial\epsilon}{\partial x_j}\right].
+    \rho \frac{\partial \epsilon}{\partial t}
+    + \rho\overline v_j \frac{\partial\epsilon}{\partial x_j}
+    = c_{\epsilon 1}\frac{\epsilon}{k}  \rho \hat \tau_{ij} \frac{\partial \overline v_i}{\partial x_j}
+    - \rho c_{\epsilon2} \frac{\epsilon^2}{k} 
+    + \frac{\partial}{\partial x_j} \left[(\mu + \mu_\tau/\sigma_\epsilon) \frac{\partial\epsilon}{\partial x_j}\right],
 \end{equation}
 \end{eqBox}
+where the terms on the right-hand side refer to the diffusion, production and dissipation rates of $\epsilon$~\cite{andersonComputationalFluidMechanics2016}.
 The constants are given by
 \begin{align}
     & c_\mu = 0.09,   & & c_{\epsilon 1} = 1.44, & & c_{\epsilon 2} = 1.92, \\
     & \sigma_k = 1.0, & & \sigma_\epsilon = 1.3.  
 \end{align}
-The computational cost that comes from the computation of two transport equations can be significant. However, as previously mentioned, this model is one of the most commonly used in the CFD field, mostly for the modelling of free-shear layer flows with small to moderate pressure gradients. One of the pitfalls of this model, however, lies in the presence of large adverse pressure gradients, which cause the model to predict results inaccurately. Improved versions of this model are also available and have been in constant development. Generally, the use of fine grids is required near solid walls. Additional modifications are necessary for the treatment of viscous flows in the vicinity of walls. This model remains as the simplest \textit{complete} model.
+The computational cost that comes from the computation of two transport equations can be significant. However, as previously mentioned, this model is one of the most commonly used in the CFD field, mostly for the modelling of free-shear layer flows with small to moderate pressure gradients. One of the pitfalls of this model, however, lies in the presence of large adverse pressure gradients, which cause the model to predict results inaccurately. This means that this model is not suitable for the computation of turbulent wall flows. Additional modifications, such as the introduction of wall functions, are necessary for the treatment of viscous flows in the vicinity of walls. This model remains one of the simplest complete models.
 \subsection{The k-$\omega$ Model}
 The $k-\omega$ model is also a two-equation model, and along with the $k-\epsilon$ model, it is one of the most commonly used turbulence RANS models. Here, the equation for the turbulent kinetic energy is the same as in the $k-\epsilon$. The second transport equation, however, is derived for the specific dissipation rate, $\omega\equiv\epsilon/k$. The eddy viscosity is defined to be
 \begin{equation}
-    \nu_\tau = \frac{k}{\omega},
+    \mu_\tau = \rho\frac{k}{\tilde \omega}, \quad \tilde\omega= \max{\left[\omega, \frac{7}{8}\sqrt{2S_{ij}S_{ij}/\beta^*}\right]}.
 \end{equation}
-and the transport equation for $\omega$ is given by~\cite{wilcox1998turbulence}
+For the sake of completeness, we rewrite the PDE for the kinetic energy, now in terms of $\omega$
 \begin{eqBox}
 \begin{equation}
-    \frac{\partial \omega}{\partial t} + \overline v_j \frac{\partial \omega}{\partial x_j} = \alpha \frac{\omega}{\kappa} \tau_{ij} 
-    \frac{\partial \overline v_i}{\partial x_j} - \beta \omega^2 + \frac{\sigma_d}{\omega} \frac{\partial k}{\partial x_j} 
-    \frac{\partial \omega}{\partial x_j} + \frac{\partial}{\partial x_j} \left[\left(\nu + \sigma\frac{k}{\omega}\right)\frac{\partial \omega}{\partial x_j}\right].
+    \rho\frac{\partial k}{\partial t} + 
+    \rho\overline v_j \frac{\partial k}{\partial x_j} 
+    = \rho \hat \tau_{ij} \frac{\partial \overline v_i}{\partial x_j}
+    - \rho\beta^* k\omega + \frac{\partial}{\partial x_j}\left[\left(\mu + \rho \sigma^* \frac{k}{\omega}\right)\frac{\partial k}{\partial x_j}\right].
+\end{equation}
+\end{eqBox}
+The specific dissipation rate $\omega$ can be computed through~\cite{wilcox1998turbulence}
+\begin{eqBox}
+\begin{equation}
+    \rho \frac{\partial \omega}{\partial t} + 
+    \rho \overline v_j \frac{\partial \omega}{\partial x_j} 
+    = \alpha \frac{\omega}{\kappa} \rho \hat \tau_{ij} \frac{\partial \overline v_i}{\partial x_j} 
+    - \rho \beta \omega^2 
+    + \rho \frac{\sigma_d}{\omega} \frac{\partial k}{\partial x_j} 
+    \frac{\partial \omega}{\partial x_j} 
+    + \frac{\partial}{\partial x_j} \left[\left(\mu + \rho\sigma\frac{k}{\omega}\right)\frac{\partial \omega}{\partial x_j}\right].
 \end{equation}
 \end{eqBox}
 The closure coefficients and auxiliary relations are given by
@@ -1078,34 +1095,45 @@ The closure coefficients and auxiliary relations are given by
 \[
     \sigma_{d} = 
 \begin{cases}
-    0,  \quad \dfrac{\partial k}{\partial x_j} \dfrac{\partial\omega}{\partial x_j}  \leq 0, \\
-    \sigma_{do}, \quad \dfrac{\partial k}{\partial x_j} \dfrac{\partial\omega}{\partial x_j} > 0.
+    0,  &\dfrac{\partial k}{\partial x_j} \dfrac{\partial\omega}{\partial x_j}  \leq 0, \\
+    \sigma_{do}, &\dfrac{\partial k}{\partial x_j} \dfrac{\partial\omega}{\partial x_j} > 0.
 \end{cases}
 \]
-An advantage of this model is the relatively accurate resolution of near-wall interaction, and for flows with the presence of strong vorticity. This makes the $k-\omega$ approach suitable for applications such as turbomachinery. However, it was found to overpredict flow separation and to be highly sensitive to the freestream conditions. In addition, compared to the $k-\epsilon$ model, it is not an appropriate choice for free-shear flows. Further improvements to this model have been made to accommodate its shortcomings~\cite{}. Taking advantage of the relative accuracy of both the $k-\epsilon$ and $k-\omega$ models, combinations of these have been derived, such as the SST model. We refer the reader to NASA's Turbulence Resource website for further amplification of this section.
+\begin{align}
+    & \beta_0 = 0.0708, & & f_\beta = \frac{1+85\chi_\omega}{1+100\chi_\omega}, & & \chi_\omega\equiv \left|\frac{\Omega_{ij}\Omega_{jk}S_{ki}}{\left(\beta^* \omega\right)^3}\right|, \\
+    & \epsilon = \beta^* \omega k, 
+\end{align}
+where $\Omega_{ij}$ is the mean-rotation tensor
+\begin{equation}
+    \Omega_{ij} = \frac{1}{2} \left( \frac{\partial \overline v_i}{\partial x_j}
+    -\frac{\partial \overline v_j}{\partial x_i}\right),
+\end{equation}
+and $S_{ij}$ is the mean strain rate tensor, as described in Equation~\ref{eq:meanstrainrate}.
+
+An advantage of this model is the relatively accurate resolution of near-wall interaction, and for flows with the presence of strong vorticity. This makes the $k-\omega$ approach suitable for applications such as turbomachinery. However, it was found to overpredict flow separation and to be highly sensitive to the freestream conditions. In addition, compared to the $k-\epsilon$ model, it is not an appropriate choice for free-shear flows. Further improvements to this model have been made to accommodate its shortcomings~\cite{}. Taking advantage of the relative accuracy of both the $k-\epsilon$ and $k-\omega$ models, combinations of these have been derived, such as the SST model. We refer the reader to NASA's Turbulence Resource website for further details and additional turbulence models.
 
 \subsection{Summary of Turbulence Models}
-We have introduced the basis of turbulence modelling using the RANS equations. As previously stated, these models are initially based on Boussinesq approximation, where a constant coefficient referred to as the eddy viscosity, is said to be linearly proportional to the mean transfer of information within the flow. Further improvements, from the definition of a mixing length distance to the resolution of transport equations for turbulent quantities, have allowed the development of turbulence models to become applicable for real-world industrial applications. These models have been devised for specific applications and can result in very inaccurate results if not chosen appropriately. It is also important to remember that these models are all limited by the time-averaging of the Navier-Stokes equations, which we have shown to behave chaotically in real scenarios. 
+We have introduced the basis of turbulence modelling using the RANS equations. As previously stated, these models are initially based on Boussinesq approximation, where a constant coefficient referred to as the eddy viscosity, is said to be linearly proportional to the mean transfer of information within the flow. Further improvements, from the definition of a mixing length distance to the resolution of transport equations for turbulent quantities, have allowed the development of turbulence models to become applicable for real-world industrial applications. These models have been devised for specific applications and can result in very inaccurate results if not chosen appropriately. However, remember that these models are primarily limited by two approximations that have been made for their construction. First, the time-averaging of the Navier-Stokes equations removed the wide range of actual length scales characteristic of turbulent flows. Second, as soon as the Boussinesq approximation becomes very far from reality for a given flow type, all the eddy-viscosity models are expected to give inaccurate results.
 
 To summarize the previous models, we present a table where we display the characteristic variables that define the model, the complete or incomplete condition according to~\cite{wilcox1998turbulence}, the number of equations to solve, and a general description including the applicability of each model.
 \begin{table}[h]
     \centering
     \caption{Summary of basic turbulent models.}
-\begin{tabular}{lp{0.2\linewidth}llp{0.35\linewidth}}
+\begin{tabular}{lp{0.17\linewidth}p{0.15\linewidth}p{0.35\linewidth}}
     \hline
-    \textbf{Model} & \textbf{Variable(s)} & \textbf{Completeness} & \textbf{Category} & \textbf{Description} \\
+    \textbf{Model} & \textbf{Variable(s)} & \textbf{Classification} & \textbf{Description} \\
     \hline
-    ML           & A mixing length $\ell_m$        & Incomplete & Algebraic     & An empirical mixing length is used to compute the eddy viscosity. This model was developed in a "rough" sense. Results are accurate only in the vicinity of laminar boundary layers.\\
+    ML           & A mixing length $\ell_m$        & Incomplete, algebraic model    & An empirical mixing length is used to compute the eddy viscosity. This model was developed in a "rough" sense. Value of $\ell_m$ depends on the type of flow.\\
     \hline
-    SA           & Turbulent quantity proportional to the viscosity $\tilde\nu$     & Complete & One-equation    & Resolution of a transport equation for a turbulent quantity, specifically a viscosity-like parameter. Computationally efficient since only a single transport equation is added. Applicable to determine aerodynamic loads at moderate angles of attack.             \\
+    SA           & Turbulent quantity proportional to the viscosity $\tilde\nu$     & Complete, one-equation model    & Resolution of a transport equation for a turbulent quantity, specifically a viscosity-like parameter. Computationally efficient since only a single transport equation is added. Applicable to determine aerodynamic loads at moderate angles of attack.             \\
     \hline
-    $k-\epsilon$ & Kinetic energy and rate of dissipation, $k$, $\epsilon$ & Complete & Two-equation    & Two transport equations are added, one for the turbulent kinetic energy and the other for its rate of dissipation. Applicable to free-shear layer flows. Gives inaccurate results for flows with large adverse pressure gradients.\\
+    $k-\epsilon$ & Kinetic energy and rate of dissipation, $k$, $\epsilon$ & Complete, two-equation model   & Two transport equations are added, one for the turbulent kinetic energy and the other for its rate of dissipation. Applicable to free-shear layer flows. Gives inaccurate results for flows with large adverse pressure gradients.\\
     \hline
-    $k-\omega$   & Kinetic energy and specific dissipation $k$, $\omega$   & Complete & Two-equation    & Requires the computation of the kinetic energy and specific dissipation rate transport equations. The model works well across the boundary layer of wall turbulent flows. Inaccurate for free-shear flows.\\
+    $k-\omega$   & Kinetic energy and specific dissipation $k$, $\omega$   & Complete, two-equation model    & Requires the computation of the kinetic energy and specific dissipation rate transport equations. The model works well across the boundary layer of wall turbulent flows. Inaccurate for free-shear flows.\\
     \hline
 \end{tabular}
 \end{table}
-More complex models can be found in the literature which have been derived from those explained in this text. Hence this compilation is by no means an extensive turbulence model reference. For further references, refer to Wilcox~\cite{wilcox} and NASA Turbulence Resource database.
+More complex models can be found in the literature. These include not only additional eddy-viscosity models but also other types of models such as Large Eddy Simulation (LES), which do not require a time-averaged RANS system of equations. For further references, refer to the NASA Turbulence Resource database.
 \chapter{Boundary Conditions}
 \section{Wall Boundaries}
 \subsection{Wall-Bounded Turbulence}
